--- a/api-reference/endpoint/signature.mdx
+++ b/api-reference/endpoint/signature.mdx
@@ -1,4 +1,7 @@
 ---
-title: 'Verify sign'
+title: '获取用户列表'
 openapi: 'GET /dev-api/test/user/list'
+---
+title: '新增用户'
+openapi: 'POST /dev-api/test/user/save'
 ---
