--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -58,6 +58,7 @@ public class OpenApiTest {
          */
         String signStr = signContent.toString();
         // Base64 encode to obtain the signature
+        // The signature is valid for 5 minutes.
         String sign = Base64Utils.encodeToString(signStr.getBytes());
         System.out.println(sign);
     }
@@ -66,3 +67,5 @@ public class OpenApiTest {
 ```
 
 Please replace "your_secret_key" and the message variable with your actual secret key and the JSON string. This example uses Base64 encoding for generating the signature. Ensure that the secret key and algorithm match those required by your API documentation.
+
+### Please note that the signature is only valid for 5 minutes.
