--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -67,4 +67,7 @@ public class OpenApiTest {
 ```
 
 Please replace "your_secret_key" and the message variable with your actual secret key and the JSON string. This example uses Base64 encoding for generating the signature. Ensure that the secret key and algorithm match those required by your API documentation.
-#### Please note that the signature is only valid for 5 minutes.
+<Note>Please note that the signature is only valid for 5 minutes.</Note>
+
+### About System Time Zone
+The system time zone is consistent with the bank time zone, which is Hong Kong Time GMT+0800.
