--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -35,7 +35,7 @@ After obtaining the signature JSON string, convert it to byte data, then use Bas
 
 ## Here is an example of Java code to generate a signature
 
-``` java
+``` java OpenApiTest.java
 import com.alibaba.fastjson2.JSONObject;
 import org.junit.Test;
 import org.springframework.util.Base64Utils;
@@ -67,7 +67,7 @@ public class OpenApiTest {
 ```
 
 Please replace "your_secret_key" and the message variable with your actual secret key and the JSON string. This example uses Base64 encoding for generating the signature. Ensure that the secret key and algorithm match those required by your API documentation.
-<Note>Please note that the signature is only valid for 5 minutes.</Note>
+<Warning>Please note that the signature is only valid for 5 minutes.</Warning>
 
 ### About System Time Zone
 The system time zone is consistent with the bank time zone, which is Hong Kong Time GMT+0800.
