Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -35,7 +35,7 @@ After obtaining the signature JSON string, convert it to byte data, then use Bas
 
 ## Here is an example of Java code to generate a signature
 
-``` java OpenApiTest.java
+``` java
 import com.alibaba.fastjson2.JSONObject;
 import org.junit.Test;
 import org.springframework.util.Base64Utils;
