Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Introduction'
+description: 'Example section for showcasing API endpoints'
+---
+
 ## Welcome
 
 Please contact your account manager to obtain an OpenAPI secret key.
