Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Overview'
-description: ''
+description: 'Below is an explanation of the signature rules.'
 ---
 
-## Welcome
+## Prepare
 
 Please contact your account manager to obtain an OpenAPI secret key.
 
