Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Overview'
-description: 'Below is an explanation of the signature rules.'
+description: 'Below is an explanation of the authenticated signature rules.'
 ---
 
 ## Prepare
