--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Overview'
+title: 'Authentication'
 description: 'Below is an explanation of the authenticated signature rules.'
 ---
 
