--- a/data-dict.mdx
+++ b/data-dict.mdx
@@ -4,9 +4,10 @@ description: 'Explanation of Data Status or Type Dictionary'
 ---
 
 ### card_used_scenes_type dict
-|usedScenes|Description|
-|---|----|
-|100|<div style="width: 500pt">Supports ad account funding & payments for cross-border platforms (Facebook, Google, TikTok, etc.)</div>|
-|101|Cross-border e-commerce payments, flight bookings, hotel reservations, and more|
-|102|Membership renewals, API services, cloud platforms, and automated billing|
-|103|Apple Pay Dedicated Cards|
+Applicable API interfaces include: Card product list,Card List,Card Order,Card Order Information,Card Order Record.
+| usedScenes | Description                         |
+| ---------- | ----------------------------------- |
+| 100 | Supports ad account funding & payments for cross-border platforms (Facebook, Google, TikTok, etc.) |
+| 101 | Cross-border e-commerce payments, flight bookings, hotel reservations, and more |
+| 102 | Membership renewals, API services, cloud platforms, and automated billing |
+| 103 | Apple Pay Dedicated Cards |
