--- a/data-dict.mdx
+++ b/data-dict.mdx
@@ -1,13 +1,15 @@
 ---
-title: 'Data Dictionary'
-description: 'Explanation of Data Status or Type Dictionary'
+title: "Data Dictionary"
+description: "Explanation of Data Status or Type Dictionary"
 ---
 
-### card_used_scenes_type dict
+### Used Scenes Type
+
 Applicable API interfaces include: Card product list,Card List,Card Order,Card Order Information,Card Order Record.
-| usedScenes | Description                         |
-| ---------- | ----------------------------------- |
-| 100 | Supports ad account funding & payments for cross-border platforms (Facebook, Google, TikTok, etc.) |
-| 101 | Cross-border e-commerce payments, flight bookings, hotel reservations, and more |
-| 102 | Membership renewals, API services, cloud platforms, and automated billing |
-| 103 | Apple Pay Dedicated Cards |
+
+| usedScenes | Description                                                                                        |
+| ---------- | -------------------------------------------------------------------------------------------------- |
+| 100        | Supports ad account funding & payments for cross-border platforms (Facebook, Google, TikTok, etc.) |
+| 101        | Cross-border e-commerce payments, flight bookings, hotel reservations, and more                    |
+| 102        | Membership renewals, API services, cloud platforms, and automated billing                          |
+| 103        | Apple Pay Dedicated Cards                                                                          |
