Documentation edits made through Mintlify web editor

--- a/data-dict.mdx
+++ b/data-dict.mdx
@@ -3,7 +3,7 @@ title: "Data Dictionary"
 description: "Explanation of Data Status or Type Dictionary"
 ---
 
-### Used Scenes Type
+### Card Used Scenes Type
 
 Applicable API interfaces include: Card product list,Card List,Card Order,Card Order Information,Card Order Record.
 
@@ -13,3 +13,14 @@ Applicable API interfaces include: Card product list,Card List,Card Order,Card O
 | 101        | Cross-border e-commerce payments, flight bookings, hotel reservations, and more                    |
 | 102        | Membership renewals, API services, cloud platforms, and automated billing                          |
 | 103        | Apple Pay Dedicated Cards                                                                          |
+
+### Card Order Status
+
+```
+| usedScenes | Description                         |
+| ---------- | ----------------------------------- |
+| 100 | Supports ad account funding & payments for cross-border platforms (Facebook, Google, TikTok, etc.) |
+| 101 | Cross-border e-commerce payments, flight bookings, hotel reservations, and more |
+| 102 | Membership renewals, API services, cloud platforms, and automated billing |
+| 103 | Apple Pay Dedicated Cards |
+```
